2005-07-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-bookmarks.c: 
	- Make bookmark headers insensitive
	
2005-05-19  Shaun McCance  <shaunm@gnome.org>

	* data/man.xml.in:
	* src/yelp-man-pager.c:
	* src/yelp-toc-pager.c:
	* stylesheets/db2html.xsl.in:
	* stylesheets/man2html.xsl:
	* stylesheets/yelp-common.xsl:
	- s/Man Pages/Manual Pages/
	- Added a linktrail to man pages

2005-05-16  Christian Persch  <chpe@cvs.gnome.org>

	* src/yelp-base.c: (yelp_base_init), (yelp_base_class_init):
	* src/yelp-db-pager.c: (db_pager_class_init), (db_pager_init):
	* src/yelp-index-model.c: (yim_class_init), (yim_init):
	* src/yelp-info-pager.c: (info_pager_class_init),
	(info_pager_init):
	* src/yelp-man-pager.c: (man_pager_class_init), (man_pager_init):
	* src/yelp-pager.c: (pager_class_init), (pager_init):
	* src/yelp-toc-pager.c: (toc_pager_class_init), (toc_pager_init):
	* src/yelp-xslt-pager.c: (xslt_pager_class_init),
	(xslt_pager_init):
	- Use gobject private data, fixing bug #140632.

2005-05-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	- Check for toolkit's nsITypeAheadFind.

	* src/Makefile.am:
	* src/Yelper.cpp:
	* src/Yelper.h:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.cpp:
	* src/yelp-html.h:
	- Refactor the Gecko backend, and add typeaheadfind
	support, if available. Plug several mem leaks en passant.

	* src/yelp-settings.h:
	- Add header guards.

	* src/yelp-toc-pager.c: (process_xslt):
	- Don't use C++ comments in C code.

	* src/yelp-window.c: (window_init), (window_finalize),
	(window_class_init), (window_populate), (window_find_action),
	(window_find_again), (window_find_clicked_cb),
	(window_find_entry_changed_cb):
	- Use typeaheadfind, if available. Bug #167536.

2005-05-16  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/Makefile.am:
	* stylesheets/db2html.xsl.in:
	* stylesheets/yelp-common.xsl:
	- Created yelp-common.xsl to hold common styling