@@ -1,5 +1,10 @@
 2005-07-05  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-toc-pager.c:
+	- Fix possible leak
+
+2005-07-05  Don Scorgie  <dscorgie@cvs.gnome.org>
+
 	* src/yelp-bookmarks.c: 
 	- Make bookmark headers insensitive
 	
